--- a/src/main/resources/templates/attraction-creation-form.html
+++ b/src/main/resources/templates/attraction-creation-form.html
@@ -17,9 +17,13 @@
     <label>Lokation</label>
     <input type="text" th:field="*{location}">
     <br>
-    <select th:field="*{tags}" multiple>
-        <option th:each="tags: ${tags}" th:value="${tags}" th:text="${tags}"></option>
-    </select>
+    <div th:each="tag : ${allTags}">
+        <input type="checkbox"
+               th:field="*{tags}"
+               th:value="${tag}" />
+        <label th:text="${tag}"></label>
+        <br>
+    </div>
     <br>
     <button type="submit">Registrer</button>
 
