--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Turistattraktioner</title>
+    <link th:href="@{/styles/main.css}" rel="stylesheet">
 </head>
 <body>
 <h1>Turistattraktioner</h1>
