Kommenteret mit mulige HTML ud.

--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -15,6 +15,9 @@
     <tr th:each="t: ${touristAttractions}">
         <td th:text="${t.name}"></td>
         <td th:text="${t.description}"></td>
+<!--        <td><button><a th:action="@{}">Opdater</a></button></td>-->
+<!--        <form th:action="@{/user/{id}(id=${user.id})}" method="post">-->
+
     </tr>
 </table>
 
