--- a/src/main/resources/templates/updateAttraction.html
+++ b/src/main/resources/templates/updateAttraction.html
@@ -5,6 +5,28 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Registrer ny turistattraktion</h1>
+<form th:action="@{/{name}/edit}" th:object="${attraction}" method="post">
+    <label>Navn</label>
+    <input type="text" th:field="*{name}">
+    <br>
+    <label>Beskrivelse</label>
+    <input type="text" th:field="*{description}">
+    <br>
+    <label>Lokation</label>
+    <input type="text" th:field="*{location}">
+    <br>
+    <div th:each="tag : ${allTags}">
+        <input type="checkbox"
+               th:field="*{tags}"
+               th:value="${tag}" />
+        <label th:text="${tag}"></label>
+        <br>
+    </div>
+    <br>
+    <button type="submit">Registrer</button>
+
+
 
 </body>
 </html>
