Tilføjet en updateAttraction.html fil med en form som er bindet til et TouristAttraction objekt. Den kalder vores update endpoint som er et nyt endpoint i TouristController.
Jeg har ryddet op i vores setters inde i TouristAttraction.

Jeg har fjernet vores Repository inde i Controlleren for at vedligeholde OOP (Separation of Concerns) og bibeholde vores 3-tier arkitektur.

Har tilføjet getTags til vores servicelag så vores Repository ikke skal have ansvaret for andet end at holde vores data.

--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -15,7 +15,7 @@
     <tr th:each="t: ${touristAttractions}">
         <td th:text="${t.name}"></td>
         <td th:text="${t.description}"></td>
-        <td><button><a th:href="@{/{name}/edit(name=${t.name})}">Opdater</a></button></td>
+        <td><button><a th:href="@{/attractions/edit/{name}(name=${t.name})}">Opdater</a></button></td>
     </tr>
 </table>
 
