Opdateret CSS i al HTML

--- a/src/main/resources/templates/attraction-creation-form.html
+++ b/src/main/resources/templates/attraction-creation-form.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Creation Form</title>
+    <link th:href="@{/css/main.css}" rel="stylesheet">
 </head>
 <body>
 
