--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -19,6 +19,7 @@
         <td th:text="${t.getLocation()}"></td>
         <td th:text="${t.getTags()}"></td>
         <td><button><a th:href="@{/attractions/edit/{name}(name=${t.name})}">Opdater</a></button></td>
+        <td><button><a th:href="@{/attractions/getDelete/{name}(name=${t.name})}">Slet</a></button></td>
         <td><button><a th:href="@{/{name}/tags(name=${t.name})}">Tags</a></button></td>
     </tr>
 </table>
