Tilføjet en fragment header vi kan bruge.

--- a/src/main/resources/templates/attraction-creation-form.html
+++ b/src/main/resources/templates/attraction-creation-form.html
@@ -7,7 +7,7 @@
     <link href="/css/main.css" rel="stylesheet">
 </head>
 <body>
-
+<div th:insert="~{fragments :: header}"></div>
 <section>
     <form class="creation-form" th:action="@{/attractions/add}" th:object="${TouristAttraction}" method="post">
         <h1 class="form-title">Registrer ny turistattraktion</h1>
