--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -21,6 +21,16 @@ h1 {
     font-family: "Roboto Light", sans-serif;
     font-size: 1.5em;
 }
+
+li, ul, a {
+    list-style-type: none;
+    text-decoration: none; /* Removes underline */
+    padding: 0;
+}
+
+a {
+    color: inherit;
+}
 label {
     width: 150px;
     display: inline-block;
@@ -119,5 +129,31 @@ input[type="checkbox"]:checked {
 
 /* Styles for attraction-creation-form.html ends here */
 
+.navbar .logo {
+    /* START Styles for navbar START */
+    max-width: 150px; /* Force it small */
+    height: auto;
+    /* Optional: filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.1)); */
+}
+
+.nav-menu {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+    text-decoration: none;
+    color: var(--textblack) !important;
+}
+
+.nav-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: space-evenly;
+    align-items: center;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 10px 20px;
+}
+
+/* END Styles for navbar END*/
 
 
