--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" th:href="@{/css/main.css}" >
 </head>
 <body>
+<div th:insert="~{fragments :: header}" class="nav-wrapper"></div>
 <h1>THIS IS A TEST</h1>
 </body>
 </html>
