--- a/src/main/resources/templates/confirmDelete.html
+++ b/src/main/resources/templates/confirmDelete.html
@@ -6,6 +6,7 @@
   <link th:href="@{/css/main.css}" rel="stylesheet">
 </head>
 <body>
+<div th:insert="~{fragments :: header}" class="nav-wrapper"></div>
 
 <h1 th:text="'Vil du slette ' + ${attractionToDelete.name} + '?'"></h1>
 
