Vi fjerner index html og istedet redirecter til attractions som vores main page. Alle sider har også fået 48px padding.

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -15,7 +15,7 @@
 
 body {
     margin: 0;
-    padding: 0;
+    padding: 48px;
     background: var(--sitewhite);
     font-family: "Roboto Light", sans-serif;
 }
