--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -7,7 +7,7 @@
     <nav th:fragment="navbar" class="navbar">
         <div class="nav-container">
             <a th:href="@{/attractions}" class="logo-link">
-                <img src="/matador-logo.png" alt="Matador Logo" class="logo">
+                <img src="/matador logo.svg" alt="Matador Logo" class="logo">
             </a>
             <ul class="nav-menu">
                 <li><a th:href="@{/attractions}">Hjem</a></li>
