--- a/src/main/resources/templates/attraction-creation-form.html
+++ b/src/main/resources/templates/attraction-creation-form.html
@@ -40,5 +40,8 @@
         <button type="submit" class="submit-btn">Registrer</button>
     </form>
 </section>
+
+<div th:insert="~{fragments :: footer}"></div>
+
 </body>
 </html>
