--- a/src/main/resources/templates/confirmDelete.html
+++ b/src/main/resources/templates/confirmDelete.html
@@ -16,5 +16,7 @@
 
 <td><button><a th:href="@{/attractions}">Nej</a></button></td>
 
+<div th:insert="~{fragments :: footer}"></div>
+
 </body>
 </html>
