--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -16,6 +16,6 @@
 </table>
 
 <button><a th:href="@{/attractions}">Tilbage</a></button>
-
+<div th:insert="~{fragments :: footer}"></div>
 </body>
 </html>
