--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -18,5 +18,34 @@
     </nav>
 </div>
 
+<div th:fragment="footer">
+    <footer th:fragment="footer" class="footer">
+        <div class="footer-container">
+            <h2>Kontakt</h2>
+            <p class = "undertitel">Lær os at kende</p>
+            <form class="newsletter">
+                <input type="email" placeholder="@gmail.com" required>
+                <button type="submit">Abonner</button>
+            </form>
+        </div>
+
+        <div class="footer-bottom">
+            <div class="footer-left">
+                <strong>Turistguide</strong>
+            </div>
+
+            <div class="footer-center">
+                © 2026 Matador. All rights reserved.
+            </div>
+
+            <div class="footer-right">
+                <a href="#">Legal</a>
+                <a href="#">Privacy policy</a>
+            </div>
+        </div>
+    </footer>
+</div>
+
+
 </body>
 </html>
