Update Attraction - nu med korrekt CSS styling og lokations dropdown

--- a/src/main/resources/templates/updateAttraction.html
+++ b/src/main/resources/templates/updateAttraction.html
@@ -22,7 +22,7 @@
 
                 <p>Vælg venligst</p>
                 <select th:field="*{location}">
-                    <option th:field="*{location}"></option>
+                    <option value="">Lokation</option>
                     <option th:each="loc : ${allLocations}" th:value="${loc}" th:text="${loc}" required></option>
                 </select>
             </div>
