- index.html done - billede til landing page - attractionlist er studset lidt op i styles, gamle er comment indented for sikkerheds skyld - updateattraction implementerer samme styles som create -> konsistens - i fragments har jeg gjort at logoet sender dig til landing - getmapping til landing page return - fjernet ubrugte imports - småjusteringer rundt så designet er konsistent + afspejler wireframen nærmere med minimal ændring af html - den der outline erik snakkede om var en shadow effekt. den er fjernet for konsistent design - osv.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -6,7 +6,7 @@
 <div th:fragment="header">
     <nav th:fragment="navbar" class="navbar">
         <div class="nav-container">
-            <a th:href="@{/attractions}" class="logo-link">
+            <a th:href="@{/}" class="logo-link">
                 <img src="/matador logo.svg" alt="Matador Logo" class="logo">
             </a>
             <ul class="nav-menu">
