--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -40,22 +40,80 @@ label {
 }
 
 table {
-    border-collapse: collapse;
-    width: 100%;
+    max-width: 1200px;
+    margin: 30px auto;
+    border-collapse: separate;
+    border-spacing: 0;
+    background: white;
+    border-radius: 12px;
+    overflow: hidden;
 }
-th, td { border: 2px solid var(--textblack); padding: 10px; text-align: left; }
+
+thead th {
+    background-color: var(--matadorred);
+    color: var(--sitewhite);
+    padding: 18px;
+    font-weight: 600;
+    font-size: 1rem;
+}
+
+tbody td {
+    padding: 18px;
+    border-bottom: 1px solid #ddd;
+    vertical-align: top;
+}
+
+tbody tr:last-child td {
+    border-bottom: none;
+}
+
+tbody tr:hover {
+    background-color: #f5f5f5;
+}
+
+td:nth-child(4) {
+    font-size: 0.9rem;
+    color: var(--textblack);
+}
+
 td:last-child {
     display: flex;
-    gap: 6px;
+    gap: 10px;
     align-items: center;
 }
 
-
-th {
-    text-align: left;
-    background-color: var(--bordeaux);
-    color: var(--sitewhite);
+td:last-child .btn {
+    padding: 8px 16px;
+    border-radius: 8px;
 }
+
+h1 {
+    max-width: 1200px;
+    margin: 40px auto 10px auto;
+}
+
+/* table {*/
+/*    border-collapse: collapse;*/
+/*    width: 100%;*/
+/*}*/
+
+/*th, td {*/
+/*    border: 2px solid var(--textblack);*/
+/*    padding: 10px;*/
+/*    text-align: left; }*/
+
+/*td:last-child {*/
+/*    display: flex;*/
+/*    gap: 6px;*/
+/*    align-items: center;*/
+/*}*/
+
+
+/*th {*/
+/*    text-align: left;*/
+/*    background-color: var(--bordeaux);*/
+/*    color: var(--sitewhite);*/
+/*}*/
 
 /* Styles for attraction-creation-form.html */
 
@@ -149,6 +207,7 @@ input[type="checkbox"]:checked {
 
 .btn-red { background-color: var(--matadorred); }
 .btn-green { background-color: var(--moneygreen); }
+.btn-yellow { background-color: var(--mustardyellow)}
 .btn-full { width: 100%; }
 
 /* Styles for attraction-creation-form.html ends here */
@@ -159,7 +218,6 @@ input[type="checkbox"]:checked {
 .navbar {
 
     background-color: var(--sitewhite);
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
     position: sticky;
     top: 0;
     z-index: 100;
@@ -279,3 +337,61 @@ input[type="checkbox"]:checked {
 /* END Styles for navbar END*/
 
 
+/* Hero section her - bruges i index.html */
+.hero {
+    display: flex;
+    align-items: stretch;
+    max-width: 1200px;
+    height: 500px; /* vi sørger for vores wrapper har fixed dimensioner */
+    margin: 60px auto;
+}
+
+/* venstre  */
+.hero-box {
+    background-color: var(--matadorred);
+    color: var(--sitewhite);
+    width: 420px;
+    padding: 60px 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.hero-box h1 {
+    font-size: 2.8rem;
+    line-height: 1.1;
+    margin: 0 0 20px 0;
+    /* top - højre - bund - venstre.
+    dvs kun bunden har 20px margin.
+    css går altid med uret*/
+}
+
+.hero-box p {
+    margin-bottom: 25px;
+    font-size: 0.95rem;
+}
+
+/* CTA BUTTON */
+.cta-button {
+    display: inline-block;
+    background-color: var(--moneygreen);
+    color: white;
+    padding: 10px 24px;
+    border-radius: 20px;
+    text-decoration: none;
+    font-weight: bold;
+    width: fit-content;
+}
+
+/* højre side */
+.hero-image {
+    flex: 1;
+    overflow: hidden; /* cropping */
+}
+
+.hero-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* cropping */
+    display: block;
+}
+/* Hero section slut */
