--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -26,9 +26,9 @@
         <td th:text="${t.description}"></td>
         <td th:text="${t.getLocation()}"></td>
         <td th:text="${t.getTags()}"></td>
-        <td><a th:href="@{/attractions/edit/{name}(name=${t.name})}" class="btn btn-green">Opdater</a>
-            <a th:href="@{/attractions/getDelete/{name}(name=${t.name})}" class="btn btn-red">Slet</a>
-            <a th:href="@{/{name}/tags(name=${t.name})}" class="btn btn-green">Tags</a></td>
+        <td><a th:href="@{/{name}/tags(name=${t.name})}" class="btn btn-green">Tags</a>
+            <a th:href="@{/attractions/edit/{name}(name=${t.name})}" class="btn btn-yellow">Opdater</a>
+            <a th:href="@{/attractions/getDelete/{name}(name=${t.name})}" class="btn btn-red">Slet</a></td>
     </tr>
     </tbody>
 </table>
