--- a/src/main/resources/templates/updateAttraction.html
+++ b/src/main/resources/templates/updateAttraction.html
@@ -7,26 +7,40 @@
 </head>
 <body>
 <div th:insert="~{fragments :: header}" class="nav-wrapper"></div>
-<h1>Registrer ny turistattraktion</h1>
-<form th:action="@{/attractions/edit/{name}}" th:object="${attraction}" method="post">
-    <label>Navn</label>
-    <input type="text" th:field="*{name}" readonly>
-    <br>
-    <label>Beskrivelse</label>
-    <input type="text" th:field="*{description}">
-    <br>
-    <label>Lokation</label>
-    <input type="text" th:field="*{location}">
-    <br>
-    <div th:each="tag : ${allTags}">
-        <input type="checkbox"
+<form class="creation-form"
+      th:action="@{/attractions/edit/{name}}"
+      th:object="${attraction}"
+      method="post">
+
+    <h1 class="form-title">Opdater turistattraktion</h1>
+
+
+    <div class="form-content">
+
+        <div>
+
+            <label>Navn</label>
+            <input type="text" th:field="*{name}" readonly>
+
+            <label>Beskrivelse</label>
+            <input type="text" th:field="*{description}">
+
+            <label>Lokation</label>
+            <input type="text" th:field="*{location}">
+        </div>
+
+        <div>
+            <p>Tags</p>
+        <div class="tag-item" th:each="tag : ${allTags}">
+            <input type="checkbox"
                th:field="*{tags}"
                th:value="${tag}" />
         <label th:text="${tag}"></label>
-        <br>
+        </div>
+        </div>
     </div>
-    <br>
-    <button type="submit">Registrer</button>
+
+    <button type="submit" class="submit-btn">Registrer</button>
 </form>
 <div th:insert="~{fragments :: footer}"></div>
 </body>
